--- a/views/users.html
+++ b/views/users.html
@@ -1,9 +1,8 @@
 {% extends 'layout.html' %}
 
-{% block title %}My Page{% endblock %}
+{% block title %}{{title}}{% endblock %}
 
 {% block head %}
-{% parent %}
 <link rel="stylesheet" href="custom.css">
 {% endblock %}
 
