--- a/views/layout.html
+++ b/views/layout.html
@@ -3,13 +3,63 @@
 <head>
     <meta charset="utf-8">
     <title>{% block title %}Olso{% endblock %}</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <!-- Le styles -->
     <link rel="stylesheet" href="/javascripts/vendor/bootstrap/css/bootstrap.min.css">
-    {% block head %}{% endblock %}
+    <link rel="stylesheet" href="/javascripts/vendor/bootstrap/css/bootstrap-responsive.min.css">
+    <link rel="stylesheet" href="/stylesheets/layout.css">
+
+    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
+    <!--[if lt IE 9]>
+    <script src="/javascripts/vendor/html5shiv/html5shiv.js"></script>
+    <![endif]-->
+
 </head>
 
 <body>
-{% block content %}{% endblock %}
 
+<div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="navbar-inner">
+        <div class="container">
+            <a class="brand" href="#">Olso</a>
+            <div class="nav-collapse collapse navigation_right">
+                <ul class="nav">
+                    <li><a href="#">Account Settings</a></li>
+                    <li><a href="#">Logout</a></li>
+                </ul>
+            </div><!--/.nav-collapse -->
+        </div>
+    </div>
+</div>
+
+<div class="container">
+    <!-- Example row of columns -->
+    <div class="row">
+        <div class="span4">
+            <h2>Heading</h2>
+            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+            <p><a class="btn" href="#">View details &raquo;</a></p>
+        </div>
+        <div class="span8">
+            <h2>Heading</h2>
+            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+            <p><a class="btn" href="#">View details &raquo;</a></p>
+        </div>
+    </div>
+
+
+    <!--<footer>-->
+        <!--<p>&copy; Olso 2013</p>-->
+    <!--</footer>-->
+
+</div> <!-- /container -->
+
+<!-- Le javascript
+================================================== -->
+<!-- Placed at the end of the document so the pages load faster -->
 <script src="/javascripts/vendor/bootstrap/js/bootstrap.min.js"></script>
 {% block scripts %}{% endblock %}
 
