--- a/views/users.html
+++ b/views/users.html
@@ -6,6 +6,21 @@
 <link rel="stylesheet" href="custom.css">
 {% endblock %}
 
-{% block content %}
-<p>This is just an awesome page.</p>
+{% block navbar_left%}
+        {% include "partials/navbar_left.html" %}
 {% endblock %}
+
+{% block page_headline %}
+
+    <h1>People</h1>
+
+{% endblock %}
+
+{% block page_highlight %}
+
+{% endblock %}
+
+{% block page_main %}
+
+{% endblock %}
+
