left nav styles

--- a/views/layout.html
+++ b/views/layout.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="/javascripts/bower_components/bootstrap/bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="/javascripts/bower_components/bootstrap-select/bootstrap-select.css">
     <link rel="stylesheet" href="/stylesheets/layout.css">
+    {% block css %}{% endblock %}
+
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -66,6 +68,7 @@
 <script src="/javascripts/bower_components/jquery/jquery.js"></script>
 <script src="/javascripts/bower_components/bootstrap/bootstrap/js/bootstrap.js"></script>
 <script src="/javascripts/bower_components/bootstrap-select/bootstrap-select.js"></script>
+
 <!-- Env: {{env_name}} -->
 {% else %}
 <script src="/javascripts/bower_components/jquery/jquery.js"></script>
