--- a/views/partials/navbar_left.html
+++ b/views/partials/navbar_left.html
@@ -6,10 +6,11 @@
 
 
 <ul class="ul_left_nav">
-    <li>
+    <li id="nav_people">
        <a href="/users">People</a>
     </li>
-    <li>
+    <li id="nav_reports">
         <a href="/reports">Reports</a>
     </li>
 </ul>
+
