--- a/views/users.html
+++ b/views/users.html
@@ -22,9 +22,9 @@
 
         <div class="left_highlight">
                <div class="range_calendar">
-                   <div class="range_left"><a href="#" id="dp4" data-date-format="yyyy-mm-dd" data-date="2013-02-20">{{}}</a></div>
+                   <div class="range_left"><a href="#" id="dp4" data-date-format="yyyy-mm-dd" data-date="{{start_date}}">{{start_date}}</a></div>
                    <div class="range_middle"> &mdash; </div>
-                   <div class="range_right"><a href="#" id="dp5" data-date-format="yyyy-mm-dd" data-date="2013-02-20">{{}}</a></div>
+                   <div class="range_right"><a href="#" id="dp5" data-date-format="yyyy-mm-dd" data-date="{{end_date}}">{{end_date}}</a></div>
                </div>
                 <ul class="highlight_numbers hide">
                     <li>Total Users <span>0</span></li>
